--- a/views/upload.hbs
+++ b/views/upload.hbs
@@ -178,7 +178,7 @@
         }
 
 
-        document.getElementById("uploadBtn").addEventListener("click", () => saveImage(1)); // Черновик
+        //document.getElementById("uploadBtn").addEventListener("click", () => saveImage(1)); // Черновик
         document.getElementById("releaseBtn").addEventListener("click", () => saveImage(2)); // Опубликовать
 
         async function saveImage(status) {
