--- a/views/profile/settings.hbs
+++ b/views/profile/settings.hbs
@@ -89,8 +89,8 @@
         document.getElementById("save").addEventListener("click", async () => {
             const login = document.getElementById("login").value.trim();
             const email = document.getElementById("email").value.trim();
-            //const password= document.getElementById("password").value;
-            //const new_password= document.getElementById("new_password").value;
+            const password = document.getElementById("password").value;
+            const new_password = document.getElementById("new_password").value;
 
             if (!login || !email) {// || !password
                 alert("поля 'Имя', 'Почта' должны быть заполнены.");
@@ -101,7 +101,7 @@
                 const response = await fetch("/user/edit", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ login, email }),//, password, new_password
+                    body: JSON.stringify({ login, email, password, new_password }),
                 });
 
                 if (response.ok) {
@@ -122,13 +122,13 @@
             if (!confirm("Вы уверены, что хотите удалить профиль?")) return;
 
             try {
-                const response = await fetch("/user/delete", {
+                const response = await fetch("/user/delete/{{user.id}}", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                 });
 
                 if (response.ok) {
-                    alert("Ваш профиль удалён.");
+                    alert("профиль удалён.");
                     window.location.href = "/"; // Перенаправление на главную
                 } else {
                     const error = await response.json();
