--- a/views/data.hbs
+++ b/views/data.hbs
@@ -81,7 +81,7 @@
     </div>
     <footer class="footer">
       <div class="footer-item">
-        <img src="/imgs/author-icon.svg" alt="Автор" class="footer-icon">
+        {{!-- <img src="/imgs/author-icon.svg" alt="Автор" class="footer-icon"> --}}
         <span>Емельяненко Савелий</span>
       </div>
       <div class="footer-item">
@@ -89,7 +89,7 @@
         <a href="mailto:ivan.ivanov@example.com">Sovergon15@gmail.com</a>
       </div>
       <div class="footer-item">
-        <img src="/imgs/about-icon.svg" alt="О проекте" class="footer-icon">
+        {{!-- <img src="/imgs/about-icon.svg" alt="О проекте" class="footer-icon"> --}}
         <a href="/about">О проекте</a>
       </div>
     </footer>
